# GMM-LLM-Proxy

./: .gitignore  Figure2.py  GMMExperiment.py  GMM_experiment.ipynb  figure2data.p  figure2multi.py  figure3.py  figure6.py  figure7.py  figure7multi.py  figure7multiCircle.py  figure7oned.py  pyproject.toml  variance.py
GMM/: GMMExperiment.py  figure2multi.py  figure3.py  figure4.py  figure7multi.py  figure7oned.py  figure7plotting.py  pyproject.toml
LLM/: RAGs.npz  figure5.ipynb  llm_flowers.py
LLM/RawData/: output2_15_0.csv  output2_15_0_2nd.csv  output2_15_1.csv  output2_15_1_2nd.csv  output2_15_2.csv  output2_15_2_2nd.csv  output2_15_3.csv  output2_15_3_2nd.csv  output2_15_4.csv  output2_15_4_2nd.csv  output2_15_5.csv  output2_15_5_2nd.csv  output2_15_6.csv  output2_15_6_2nd.csv  output2_15_7.csv  output2_15_7_2nd.csv  output2_1_0.csv  output2_1_0_2nd.csv  output2_1_1.csv  output2_1_1_2nd.csv  output2_1_2.csv  output2_1_2_2nd.csv  output2_1_3.csv  output2_1_3_2nd.csv  output2_1_4.csv  output2_1_4_2nd.csv  output2_1_5.csv  output2_1_5_2nd.csv  output2_1_6.csv  output2_1_6_2nd.csv  output2_1_7.csv  output2_1_7_2nd.csv  output2_25_0.csv  output2_25_0_2nd.csv  output2_25_1.csv  output2_25_1_2nd.csv  output2_25_2.csv  output2_25_2_2nd.csv  output2_25_3.csv  output2_25_3_2nd.csv  (+152 more)
MultiReplicateExperiments/: gmm_experiment.py  gmm_experiment_mu.py
