[tool.poetry]
name = "gmmexperiment"
version = "0.1.0"
description = ""
authors = ["edlwang <ewang43@jhu.edu>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.4.1"
scipy = "^1.17.0"
scikit-learn = "^1.8.0"
matplotlib = "^3.10.8"
joblib = "^1.5.3"
tqdm = "^4.67.1"
pandas = "^3.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
